docs(schema): adding ID for edge index

--- a/data/person.mapping.json
+++ b/data/person.mapping.json
@@ -8,7 +8,7 @@
       }
     }
   },
-  "mapping": {
+  "mappings": {
     "person": {
       "properties": {
         "name": {
@@ -23,12 +23,23 @@
             }
           }
         },
+        "addresses": {
+          "type": "nested",
+          "index": "not_analyzed",
+          "properties": {
+            "street_number": { "type": "string" },
+            "street_name": { "type": "string" },
+            "city": { "type": "keyword" },
+            "state": { "type": "keyword" },
+            "zip": { "type": "keyword" }
+          }
+        },
         "path": {
-          "type":  "string",
+          "type": "string",
           "index": "not_analyzed",
           "fields": {
             "tree": {
-              "type":     "string",
+              "type": "string",
               "analyzer": "paths"
             }
           }
