--- a/cog.toml
+++ b/cog.toml
@@ -8,6 +8,7 @@ pre_bump_hooks = [
 post_bump_hooks = [
     "git push",
     "git push --tags",
+#    "gh release create {{version}} -d -t 'Version {{version}}' -n \"$(cog changelog -a v{{version}})\"",
 ]
 
 [commit_types]
