fix(proto): add remote buf.build

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -4,45 +4,34 @@ managed:
   go_package_prefix:
     default: github.com/xmlking/entity-resolution/gen/go
     except:
-      - buf.build/srikrsna/protoc-gen-gotag
+      - buf.build/googleapis/googleapis
       - buf.build/envoyproxy/protoc-gen-validate
   java_multiple_files: true
 #  java_package_prefix: com
 
 plugins:
-  ## GoLang
-# FIXME: https://github.com/srikrsna/protoc-gen-gotag/issues/26
-#  - name: gotag
-#    out: gen/go
-#    opt:
-#      - paths=source_relative
-  - remote: buf.build/protocolbuffers/plugins/go:v1.28.0-1
+  ### connect-go ###
+  - remote: buf.build/protocolbuffers/plugins/go
     out: gen/go
     opt:
       - paths=source_relative
-  - remote: buf.build/grpc/plugins/go:v1.2.0-1
+  - remote: buf.build/bufbuild/plugins/connect-go
     out: gen/go
     opt:
       - paths=source_relative
-      - require_unimplemented_servers=false
-  - remote: buf.build/go-sdk/plugins/protoc-gen-validate:v0.6.7-1
+  - remote: buf.build/go-sdk/plugins/protoc-gen-validate
     out: gen/go
     opt:
       - lang=go
       - paths=source_relative
 
-  ### typescript ###
-  - remote: buf.build/timostamm/plugins/protobuf-ts:v2.4.0-1
+  ### connect-web ###
+  - remote: buf.build/bufbuild/plugins/connect-web
     out: gen/ts
     opt:
+      - target=ts
+  - remote: buf.build/bufbuild/plugins/es
+    out: gen/ts
+    opt:
+      - target=ts
       - generate_dependencies
-      - ts_nocheck
-      - eslint_disable
-#      - long_type_string
-#      - enable_angular_annotations
-#      - add_pb_suffix
-#    strategy: all
-
-  ### node ###
-  - remote: buf.build/grpc/plugins/node:v1.11.2-1
-    out: gen/node
